# rpr

./: .gitignore  pyproject.toml
rpr/models/: metrics.py  trainer.py
rpr/models/L1/: L1_best.pth  L1_full_best.pth  L1_history.npy  data.py  fit.py  model.py  test.py
rpr/models/L2/: L2_best.pth  L2_full_best.pth  L2_history.npy  data.py  fit.py  model.py  test.py
rpr/models/L3/: L3_best.pth  L3_full_best.pth  L3_history.npy  data.py  fit.py  model.py  test.py
rpr/models/analysis/: df_describe.py
rpr/simulator/: main.py
rpr/simulator/data/: test_1000_250_500_1000.csv
rpr/simulator/logic/: logging.py  offset.py  singularity.py  target.py
rpr/simulator/modules/: __init__.py  detail.py  ground.py  leg.py  model.py  platform.py
rpr/сalculate/: calc_data.py
rpr/сalculate/data/: test_1000_250_500_10_170_1000.csv  test_100_25_50_10_170_1000.csv
utils/: __init__.py  color.py  plot.py
